@@ -72,6 +72,26 @@ setting like this:
    cluster health, monitoring,  and checks, to list the available nodes
    in the cluster and to list the tables.
 
+.. _auth_password:
+
+Password Authentication Method
+==============================
+
+When the ``password`` authentication method is used, the client has to provide
+a password additionally to the username. The password is sent from the client
+to the server in **clear text**, which means that unless SSL is enabled, the
+password could potentially be read by anyone sniffing the network.
+
+Password authentication is only supported over the Postgres Protocol, not over
+HTTP connections.
+
+.. NOTE::
+
+   **CrateDB does not store user passwords as clear text!**
+
+   CrateDB stores user passwords salted with a per-user salt and hashed using
+   the PBKDF2_ key derivation function and the `SHA-2 hash algorithm`_.
+
 .. _auth_cert:
 
 Client Certificate Authentication Method
@@ -97,3 +117,7 @@ connect using SSL with client certificate.
   :ref:`administration_hba`
 
   :doc:`/administration/ssl`
+
+
+.. _PBKDF2: https://en.wikipedia.org/wiki/PBKDF2
+.. _SHA-2 hash algorithm: https://en.wikipedia.org/wiki/SHA-2
