@@ -15,6 +15,13 @@ the appropriate section of the docs.
 Breaking Changes
 ================
 
+ - The default value of the setting ``auth.host_based.enabled`` (``false``) is
+   overwritten with ``true`` in the ``crate.yml`` that is shipped with the
+   tarball and Linux distributions of CrateDB and also contains a sane default
+   configuration for ``auth.host_based.config``.
+   This is done in order to provide a better default installation for new users
+   without breaking exising HBA configurations.
+
  - Columns aren't implicitly cast to a type anymore. Whenever columns are
    compared to Literals (e.g. 'string', 1, 1.2), these literals will be
    converted to the column type but not vice-versa. The column can still be
